ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vetclinic-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: vetclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vetclinic
                port:
                  number: 3000
