allow-grafana-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-grafana-to-postgres
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: vetclinic
        - podSelector:
            matchLabels:
              app: grafana
      ports:
        - protocol: TCP
          port: 5432
